# hunspell

./: CMakeLists.txt
src/hunspell/: CMakeLists.txt
